--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -123,6 +123,117 @@
     box-shadow: 0 1px 0px #fcfcfc inset, 0 1px 0 #bebbb9;   
   }
 
+/*PROJECTS*/
+.gallery.box{
+    width: 405px;
+    height:405px;
+    margin: 1% auto;
+    overflow: hidden;
+    border-radius: 1%;
+    border: 10px #4b3f72 solid;
+}
+  
+.gallery .card{
+      position: relative;
+}
+  
+.gallery .background, .gallery .column{
+    height: 405px;
+}
+  
+.gallery .overlay{
+    position: absolute;
+    top:0;
+    bottom: 0;
+    left:0;
+    right: 0;
+    opacity: 0;
+    background-color: #000;
+    -webkit-transition: opacity 0.35s;
+    -o-transition: opacity 0.35s;
+    transition: opacity 0.35s;
+}
+  
+.gallery .info, .gallery .foot{
+    -webkit-transition: bottom 0.35s;
+    -o-transition: bottom 0.35s;
+    transition: bottom 0.35s;
+}
+  
+.gallery .info{
+    position: absolute;
+    bottom: -35px;
+    width: 100%;
+}
+  
+.gallery .info h2 a{
+    color: #Ebebeb;
+    background-color: #1F2041; 
+    display: block;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
+    text-decoration:none;
+}
+  
+.gallery .info h2{
+    line-height: 1.5rem;
+    font-size: 1.5rem;
+    padding: 2%;
+    font-weight: 400;
+    font-family: 
+}
+  
+.gallery .foot{
+    height: 35px;
+    bottom: -35px;
+    position: relative;
+    color:#Ebebeb;
+    padding: 0 10px;   
+}
+  
+.gallery .foot .line{
+    height: 2px;
+    display: block;
+    margin: 10px 0;
+    background-color: #Ebebeb;
+    margin-top: 20px;
+    width: 0%;
+    transition: width 0.6s;
+}
+  
+.gallery .date{
+    font-weight: bold;
+    font-family: 'Montserrat', sans-serif;
+  }
+  
+.gallery .fa-desktop{
+    top: 0;
+    left: 0;
+    padding: 5%;
+    position: absolute;
+    color: #19647E;
+    font-size: 1.5rem;
+    z-index: 1;
+    transition: font-size 0.35s;
+  }
+  
+/* All hovers here! */
+.gallery:hover .info, .gallery:hover .foot{
+      bottom:10px;
+  }
+  
+.gallery:hover .overlay{
+      opacity: 0.5;
+  }
+  
+.gallery:hover .foot .line{
+    width: 100%;
+  }
+  
+.gallery:hover .fa-desktop{
+    font-size: 2.5rem;
+  }
+
+
   /*MEDIA QUERIES*/
 
     /*****XLARGE - min-width:1200px*****/
@@ -227,8 +338,8 @@
 @media (max-width: 767px) {
 
     /***MAIN***/
-    .container-main img {
-        width: 25%;
+    #profile-photo {
+        width: 50%;
     }
 
     h1.name {
@@ -241,9 +352,9 @@
         margin-left: 0;
     }
     
-    p.text-photo {
-        margin: 2rem 3.5rem;
+    #information {
         font-weight: 300;
+        margin: 1rem;
     }
 
     .title-text {
@@ -400,7 +511,7 @@ h5 {
     
     /***EDUCATION***/
     #degree-title h3 {
-        font-size: 1.2rem;
+        font-size: 1.1rem;
     }
 
     h5 {
@@ -419,11 +530,11 @@ h5 {
 
     /***COURSES***/
     #course-title h3 {
-        font-size: 0.8rem;
+        font-size: 1.1rem;
     }
 
     .container-course-degree p {
-        font-size: 0.6rem;
+        font-size: 0.8rem;
         padding: 2%;
         
     }
@@ -444,4 +555,7 @@ h5 {
     .language-class p {
         font-size: 1rem;
     }
+
+    /***PROJECTS-EXPERIENCE***/
+
 }
