--- a/SCSS/stylesheet.scss
+++ b/SCSS/stylesheet.scss
@@ -656,7 +656,7 @@ body {
 /*ABILITIES*/
 		.abilities {
 			display: grid;
-			background-color: #4b3f72;
+			background-color: $purple;
 
 			.container-abilities {
 				font-family: 'Oswald', sans-serif;
@@ -667,8 +667,8 @@ body {
 					grid-gap: 0.5rem;
 
 					.ability-class {
-						border: 0.3rem solid #19647E;
-						background-color: #Ebebeb;
+						border: 0.3rem solid $light-blue;
+						background-color: $grey;
 						animation-name: fadeIn;
 						animation-duration: 2s;
 						margin: auto;
@@ -677,32 +677,21 @@ body {
 			}
 		}
 
-/*PROJECTS*/
-		.container-projects {
-			div {
-
-			}
-		}
-
 /*FORM*/
-		form {
-			padding: 0.5em 1.2em;
-		}
-
 		.container-email {
-			background-image: linear-gradient(#4b3f72, #1F2041);
+			background-image: linear-gradient($purple, $dark-blue);
 			margin: auto;
 			text-align: center;
 			padding: 1%;
 			p {
-				color: #Ebebeb;
+				color: $grey;
 			}
 			a {
 				img {
 					width: 4rem;
 					border-radius: 50%;
 					&:hover {
-						background-color: #FFC857;
+						background-color: $yellow;
 					}
 				}
 			}
@@ -715,8 +704,8 @@ body {
 
 		.container-footer {
 			padding: 0.5em 0 0.5em 0;
-			background-color: #1F2041;
-			color: #Ebebeb;
+			background-color: $dark-blue;
+			color: $grey;
 			text-align: center;
 			margin: auto;
 
@@ -728,7 +717,7 @@ body {
 				}
 			}
 			.copyright {
-				color: #Ebebeb;
+				color: $grey;
 			}
 		}
 	}
