Modified projects.html card size on small devices

--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -573,4 +573,13 @@ h5 {
         width: 70%;
     }
 
+    /***PROJECTS***/
+    .gallery.box{
+        width: 350px;
+        height:350px;
+    }
+
+    .gallery .background, .gallery .column{
+        height: 350px;
+    }
 }
